exports[`components/Switch disabled when "false" a default checkbox is rendered 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-cursor:pointer
rn-display:flex
rn-flexBasis:auto
rn-flexDirection:column
rn-flexShrink:0
rn-font:inherit

rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-userSelect:none"
  style={
    Object {
      "height": "20px",
      "width": "40px",
    }
  }>
  <div
    className="
  rn-alignItems:stretch
  
  
  
  
  
  rn-borderTopStyle:solid
  rn-borderRightStyle:solid
  rn-borderBottomStyle:solid
  rn-borderLeftStyle:solid
  rn-borderTopWidth:0px
  rn-borderRightWidth:0px
  rn-borderBottomWidth:0px
  rn-borderLeftWidth:0px
  rn-bottom:0px
  rn-boxSizing:border-box
  rn-color:inherit
  rn-display:flex
  rn-flexBasis:auto
  rn-flexDirection:column
  rn-flexShrink:0
  rn-font:inherit
  rn-height:70%
  rn-left:0px
  rn-listStyle:none
  rn-marginTop:auto
  rn-marginRight:auto
  rn-marginBottom:auto
  rn-marginLeft:auto
  rn-minHeight:0px
  rn-minWidth:0px
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:absolute
  rn-right:0px
  rn-textAlign:inherit
  rn-textDecoration:none
  rn-top:0px
  rn-transitionDuration:0.1s
  rn-width:90%"
    style={
      Object {
        "backgroundColor": "#939393",
        "borderBottomLeftRadius": "10px",
        "borderBottomRightRadius": "10px",
        "borderTopLeftRadius": "10px",
        "borderTopRightRadius": "10px",
      }
    } />
  <div
    className="
  rn-alignItems:stretch
  rn-alignSelf:flex-start
  
  rn-borderTopLeftRadius:100%
  rn-borderTopRightRadius:100%
  rn-borderBottomRightRadius:100%
  rn-borderBottomLeftRadius:100%
  rn-borderTopStyle:solid
  rn-borderRightStyle:solid
  rn-borderBottomStyle:solid
  rn-borderLeftStyle:solid
  rn-borderTopWidth:0px
  rn-borderRightWidth:0px
  rn-borderBottomWidth:0px
  rn-borderLeftWidth:0px
  rn-boxShadow:0px-1px-3px-rgba(0,0,0,0.5)
  rn-boxSizing:border-box
  rn-color:inherit
  rn-display:flex
  rn-flexBasis:auto
  rn-flexDirection:column
  rn-flexShrink:0
  rn-font:inherit
  
  rn-left:0%
  rn-listStyle:none
  rn-marginTop:0px
  rn-marginRight:0px
  rn-marginBottom:0px
  rn-marginLeft:0px
  rn-minHeight:0px
  rn-minWidth:0px
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:relative
  rn-textAlign:inherit
  rn-textDecoration:none
  rn-transform:translateZ(0px)
  rn-transitionDuration:0.1s"
    style={
      Object {
        "backgroundColor": "#FAFAFA",
        "height": "20px",
        "width": "20px",
      }
    } />
  <input
    checked={false}
    className="
  rn-bottom:0px
  rn-cursor:inherit
  rn-height:100%
  rn-left:0px
  rn-marginTop:0px
  rn-marginRight:0px
  rn-marginBottom:0px
  rn-marginLeft:0px
  rn-opacity:0
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:absolute
  rn-right:0px
  rn-top:0px
  rn-width:100%"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={Object {}}
    type="checkbox" />
</div>
`;

exports[`components/Switch disabled when "true" a disabled checkbox is rendered 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-cursor:default
rn-display:flex
rn-flexBasis:auto
rn-flexDirection:column
rn-flexShrink:0
rn-font:inherit

rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-userSelect:none"
  style={
    Object {
      "height": "20px",
      "width": "40px",
    }
  }>
  <div
    className="
  rn-alignItems:stretch
  rn-backgroundColor:#D5D5D5
  
  
  
  
  rn-borderTopStyle:solid
  rn-borderRightStyle:solid
  rn-borderBottomStyle:solid
  rn-borderLeftStyle:solid
  rn-borderTopWidth:0px
  rn-borderRightWidth:0px
  rn-borderBottomWidth:0px
  rn-borderLeftWidth:0px
  rn-bottom:0px
  rn-boxSizing:border-box
  rn-color:inherit
  rn-display:flex
  rn-flexBasis:auto
  rn-flexDirection:column
  rn-flexShrink:0
  rn-font:inherit
  rn-height:70%
  rn-left:0px
  rn-listStyle:none
  rn-marginTop:auto
  rn-marginRight:auto
  rn-marginBottom:auto
  rn-marginLeft:auto
  rn-minHeight:0px
  rn-minWidth:0px
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:absolute
  rn-right:0px
  rn-textAlign:inherit
  rn-textDecoration:none
  rn-top:0px
  rn-transitionDuration:0.1s
  rn-width:90%"
    style={
      Object {
        "borderBottomLeftRadius": "10px",
        "borderBottomRightRadius": "10px",
        "borderTopLeftRadius": "10px",
        "borderTopRightRadius": "10px",
      }
    } />
  <div
    className="
  rn-alignItems:stretch
  rn-alignSelf:flex-start
  rn-backgroundColor:#BDBDBD
  rn-borderTopLeftRadius:100%
  rn-borderTopRightRadius:100%
  rn-borderBottomRightRadius:100%
  rn-borderBottomLeftRadius:100%
  rn-borderTopStyle:solid
  rn-borderRightStyle:solid
  rn-borderBottomStyle:solid
  rn-borderLeftStyle:solid
  rn-borderTopWidth:0px
  rn-borderRightWidth:0px
  rn-borderBottomWidth:0px
  rn-borderLeftWidth:0px
  rn-boxShadow:0px-1px-3px-rgba(0,0,0,0.5)
  rn-boxSizing:border-box
  rn-color:inherit
  rn-display:flex
  rn-flexBasis:auto
  rn-flexDirection:column
  rn-flexShrink:0
  rn-font:inherit
  
  rn-left:0%
  rn-listStyle:none
  rn-marginTop:0px
  rn-marginRight:0px
  rn-marginBottom:0px
  rn-marginLeft:0px
  rn-minHeight:0px
  rn-minWidth:0px
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:relative
  rn-textAlign:inherit
  rn-textDecoration:none
  rn-transform:translateZ(0px)
  rn-transitionDuration:0.1s"
    style={
      Object {
        "height": "20px",
        "width": "20px",
      }
    } />
  <input
    checked={false}
    className="
  rn-bottom:0px
  rn-cursor:inherit
  rn-height:100%
  rn-left:0px
  rn-marginTop:0px
  rn-marginRight:0px
  rn-marginBottom:0px
  rn-marginLeft:0px
  rn-opacity:0
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:absolute
  rn-right:0px
  rn-top:0px
  rn-width:100%"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={Object {}}
    type="checkbox" />
</div>
`;

exports[`components/Switch value when "false" an unchecked checkbox is rendered 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-cursor:pointer
rn-display:flex
rn-flexBasis:auto
rn-flexDirection:column
rn-flexShrink:0
rn-font:inherit

rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-userSelect:none"
  style={
    Object {
      "height": "20px",
      "width": "40px",
    }
  }>
  <div
    className="
  rn-alignItems:stretch
  
  
  
  
  
  rn-borderTopStyle:solid
  rn-borderRightStyle:solid
  rn-borderBottomStyle:solid
  rn-borderLeftStyle:solid
  rn-borderTopWidth:0px
  rn-borderRightWidth:0px
  rn-borderBottomWidth:0px
  rn-borderLeftWidth:0px
  rn-bottom:0px
  rn-boxSizing:border-box
  rn-color:inherit
  rn-display:flex
  rn-flexBasis:auto
  rn-flexDirection:column
  rn-flexShrink:0
  rn-font:inherit
  rn-height:70%
  rn-left:0px
  rn-listStyle:none
  rn-marginTop:auto
  rn-marginRight:auto
  rn-marginBottom:auto
  rn-marginLeft:auto
  rn-minHeight:0px
  rn-minWidth:0px
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:absolute
  rn-right:0px
  rn-textAlign:inherit
  rn-textDecoration:none
  rn-top:0px
  rn-transitionDuration:0.1s
  rn-width:90%"
    style={
      Object {
        "backgroundColor": "#939393",
        "borderBottomLeftRadius": "10px",
        "borderBottomRightRadius": "10px",
        "borderTopLeftRadius": "10px",
        "borderTopRightRadius": "10px",
      }
    } />
  <div
    className="
  rn-alignItems:stretch
  rn-alignSelf:flex-start
  
  rn-borderTopLeftRadius:100%
  rn-borderTopRightRadius:100%
  rn-borderBottomRightRadius:100%
  rn-borderBottomLeftRadius:100%
  rn-borderTopStyle:solid
  rn-borderRightStyle:solid
  rn-borderBottomStyle:solid
  rn-borderLeftStyle:solid
  rn-borderTopWidth:0px
  rn-borderRightWidth:0px
  rn-borderBottomWidth:0px
  rn-borderLeftWidth:0px
  rn-boxShadow:0px-1px-3px-rgba(0,0,0,0.5)
  rn-boxSizing:border-box
  rn-color:inherit
  rn-display:flex
  rn-flexBasis:auto
  rn-flexDirection:column
  rn-flexShrink:0
  rn-font:inherit
  
  rn-left:0%
  rn-listStyle:none
  rn-marginTop:0px
  rn-marginRight:0px
  rn-marginBottom:0px
  rn-marginLeft:0px
  rn-minHeight:0px
  rn-minWidth:0px
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:relative
  rn-textAlign:inherit
  rn-textDecoration:none
  rn-transform:translateZ(0px)
  rn-transitionDuration:0.1s"
    style={
      Object {
        "backgroundColor": "#FAFAFA",
        "height": "20px",
        "width": "20px",
      }
    } />
  <input
    checked={false}
    className="
  rn-bottom:0px
  rn-cursor:inherit
  rn-height:100%
  rn-left:0px
  rn-marginTop:0px
  rn-marginRight:0px
  rn-marginBottom:0px
  rn-marginLeft:0px
  rn-opacity:0
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:absolute
  rn-right:0px
  rn-top:0px
  rn-width:100%"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={Object {}}
    type="checkbox" />
</div>
`;

exports[`components/Switch value when "true" a checked checkbox is rendered 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-cursor:pointer
rn-display:flex
rn-flexBasis:auto
rn-flexDirection:column
rn-flexShrink:0
rn-font:inherit

rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-userSelect:none"
  style={
    Object {
      "height": "20px",
      "width": "40px",
    }
  }>
  <div
    className="
  rn-alignItems:stretch
  
  
  
  
  
  rn-borderTopStyle:solid
  rn-borderRightStyle:solid
  rn-borderBottomStyle:solid
  rn-borderLeftStyle:solid
  rn-borderTopWidth:0px
  rn-borderRightWidth:0px
  rn-borderBottomWidth:0px
  rn-borderLeftWidth:0px
  rn-bottom:0px
  rn-boxSizing:border-box
  rn-color:inherit
  rn-display:flex
  rn-flexBasis:auto
  rn-flexDirection:column
  rn-flexShrink:0
  rn-font:inherit
  rn-height:70%
  rn-left:0px
  rn-listStyle:none
  rn-marginTop:auto
  rn-marginRight:auto
  rn-marginBottom:auto
  rn-marginLeft:auto
  rn-minHeight:0px
  rn-minWidth:0px
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:absolute
  rn-right:0px
  rn-textAlign:inherit
  rn-textDecoration:none
  rn-top:0px
  rn-transitionDuration:0.1s
  rn-width:90%"
    style={
      Object {
        "backgroundColor": "#A3D3CF",
        "borderBottomLeftRadius": "10px",
        "borderBottomRightRadius": "10px",
        "borderTopLeftRadius": "10px",
        "borderTopRightRadius": "10px",
      }
    } />
  <div
    className="
  rn-alignItems:stretch
  rn-alignSelf:flex-start
  
  rn-borderTopLeftRadius:100%
  rn-borderTopRightRadius:100%
  rn-borderBottomRightRadius:100%
  rn-borderBottomLeftRadius:100%
  rn-borderTopStyle:solid
  rn-borderRightStyle:solid
  rn-borderBottomStyle:solid
  rn-borderLeftStyle:solid
  rn-borderTopWidth:0px
  rn-borderRightWidth:0px
  rn-borderBottomWidth:0px
  rn-borderLeftWidth:0px
  rn-boxShadow:0px-1px-3px-rgba(0,0,0,0.5)
  rn-boxSizing:border-box
  rn-color:inherit
  rn-display:flex
  rn-flexBasis:auto
  rn-flexDirection:column
  rn-flexShrink:0
  rn-font:inherit
  
  rn-left:100%
  rn-listStyle:none
  rn-marginTop:0px
  rn-marginRight:0px
  rn-marginBottom:0px
  
  rn-minHeight:0px
  rn-minWidth:0px
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:relative
  rn-textAlign:inherit
  rn-textDecoration:none
  rn-transform:translateZ(0px)
  rn-transitionDuration:0.1s"
    style={
      Object {
        "backgroundColor": "#009688",
        "height": "20px",
        "marginLeft": "-20px",
        "width": "20px",
      }
    } />
  <input
    checked={true}
    className="
  rn-bottom:0px
  rn-cursor:inherit
  rn-height:100%
  rn-left:0px
  rn-marginTop:0px
  rn-marginRight:0px
  rn-marginBottom:0px
  rn-marginLeft:0px
  rn-opacity:0
  rn-paddingTop:0px
  rn-paddingRight:0px
  rn-paddingBottom:0px
  rn-paddingLeft:0px
  rn-position:absolute
  rn-right:0px
  rn-top:0px
  rn-width:100%"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={Object {}}
    type="checkbox" />
</div>
`;
